# actix-psql-template

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml  main.rs  main.rs.bak  main.rs.bak.delete  main_example.rs  setup-db.sh  setup-project.sh
scripts/: delete-db.sh  setup-db.sh  setup-project.sh
traefik_configuration/: docker-compose_backup.yml  traefik_api_backup.yml  traefik_backup.yml
