[package]
name = "aaabbb"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "aaabbb"
path = "main.rs"

[dependencies]
actix-web = "4.4"
actix-rt = "2.9"
actix-cors = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "chrono"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"

